# stats-importer

./: .example.env  .gitignore  Cargo.toml  README.md  sqlx-data.json
.github/workflows/: ci.yml
.sqlx/: query-701497f1253fb5aed14f2759b2c585bfac436893d94bb1ee9793ba4d65e16092.json  query-9a2d45a23fc5a6cd00d4f15c539effbe5f05f53b2890394b0ff64d28df3f9bf4.json
scripts/: run-backfill-nice.sh
src/: backfill.rs  main.rs
