[package]
name = "stats-importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
dotenvy = "*"
zip = "0.6.4"
regex = "*"
anyhow = "1.0.69"
thiserror = "1.0.38"
sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls", "postgres", "macros"] }
tokio = { version= "1.25.0", features = ["full"] }
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls", "json"] }
serde = "1.0.152"
serde_json = "1.0.93"

